fix: openapi schema
